- added snakebite logo - new slideshow image placeholders - fixed overflow issue with country dropdown

--- a/source/stylesheets/cart.css.scss
+++ b/source/stylesheets/cart.css.scss
@@ -290,8 +290,9 @@
 }
 .country-list {
   background: #{"{{theme.background_color}}"};
+  height:auto;
   max-height: 200px;
-  overflow: scroll;
+  overflow-y: auto;
   -webkit-overflow-scrolling: touch;
 }
 .country-list li {
